# pumas

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.rst  description.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-uncertainty.txt  requirements.txt
.github/workflows/: test_suite.yml
docs/source/: Installation.rst  conf.py  index.rst
notebooks/: 02_desirability_functions.ipynb  03_aggregation_functions.ipynb  04_scoring_profile.ipynb  05_apply_a_scoring_framework.ipynb  05_scoring_function.ipynb  06_scoring_framework.ipynb  mermaid_utils.py
notebooks/notebook_utils/: mermaid_utils.py
stubs/: uncertainties.pyi
tests/: conftest.py  test_general.py
tests/aggregation/: conftest.py  test_aggregation_utils.py  test_weighted_arithmetic_mean.py  test_weighted_deviation_index.py  test_weighted_geometric_mean.py  test_weighted_harmonic_mean.py  test_weighted_product.py  test_weighted_summation.py
tests/architecture/: test_catalogue.py  test_parameter_manager.py  test_parameterized_strategy.py  test_parameters.py
tests/dataframe/: test_data_frame_1_initialization.py  test_data_frame_2_index_management.py  test_data_frame_3_metadata_management.py  test_data_frame_4_dtype_management.py
tests/dataframes/: test_data_frame_1_initialization.py  test_data_frame_2_index_management.py  test_data_frame_3_metadata_management.py  test_data_frame_4_dtype_management.py  test_data_frame_5_apply_function_element_wise.py  test_data_frame_6_concatenate.py  test_dataframe_utils_conversion.py
tests/desirability/: test_desirability_catalogue.py
tests/examples/: test_harrington.py
tests/framework/: test_score_value_framework.py  test_scoring_function.py
tests/plotting/: xtest_parameter_analysis.py  (+1 more)
(+145 files in other folders)
