[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "pumas"
version = "1.0.2"
requires-python = ">=3.9"
# https://pypi.org/classifiers/
classifiers = [
        "Intended Audience :: Science/Research",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: OS Independent",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
]
dynamic = [
    "dependencies",
    "description",
    "optional-dependencies",
    "readme",
]

[project.urls]
homepage = "https://github.com/syngenta/pumas"
repository = "https://github.com/syngenta/pumas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
description = {file = "description.txt"}
readme = {file = "README.rst", content-type = "text/x-rst"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = "requirements-dev.txt"}
uncertainty = {file = ["requirements-uncertainty.txt"]}
graphics = {file = ["requirements-graphics.txt"]}

[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
